# thn-cli

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md  cli_structure_verify.py  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/: ci_gate_binding_final.txt  ci_gate_binding_verify.txt  ci_gate_final.txt  labeler.yml
docs/: DEV_TOOLING_INVENTORY.md  DEV_TOOLS.md  ERROR_CONTRACTS.md  GOLDEN_MASTER.md  INTENTIONAL_VIOLATIONS.md  JUNK_FILE_POLICY.md  RELEASE_CHECKLIST.md  RELEASE_TOOLING_INVENTORY.md  THN_CLI_Contract_Boundaries.md  THN_CLI_Diagnostics_Downgrade_Policy.md  THN_CLI_Diagnostics_Normalization_Contract.md  THN_CLI_Diagnostics_Policy_Escalation.md  THN_CLI_Diagnostics_Strict_Enforcement.md  THN_CLI_First_Time_Output_Policy.md  THN_CLI_Golden_Master_Spec.md  THN_CLI_Golden_Master_Spec.md.not yet populated  THN_CLI_Sync_Apply_Backup_Safety.md  THN_CLI_Sync_History_Diagnostic_Contract.md  THN_CLI_Sync_History_Diagnostics.md  THN_CLI_Sync_Inspect_Diagnostic_Contract.md  THN_CLI_Sync_Status_Contract.md  THN_CLI_Sync_Status_Diagnostic_Contract.md  THN_GUI_History_Capabilities_Contract.md  THN_GUI_History_Contracts_Index.md  THN_GUI_History_Cursor_and_Continuity.md  THN_GUI_History_Field_Exposure_and_Redaction.md  THN_GUI_History_Filtering_Contract.md  THN_GUI_History_Pagination_and_Ordering.md  THN_Sync_Read_Semantics_Stub.md  THN_Sync_Status_DB_Contract.md  THN_Sync_Status_DB_Read_Surface.md  THN_Sync_Status_DB_Read_Surface_Contract.md  THN_Sync_TXLOG_Contract.md  THN_Sync_Unified_History_Reader.md  THN_Sync_Unified_History_Strict_Mode.md  THN_Versioning_Policy.md  contributing.md  index.md
scripts/: dev_setup.ps1  dev_setup.sh  forbid_zero_byte_no_ext.py  selftest_thn_cli.bat  selftest_thn_cli.ps1  selftest_thn_cli.sh  verify_cli_domain_separation.py  verify_cli_inventory.py  verify_dev_tooling_inventory.py  verify_diagnostic_domain_purity.py
site/: 404.html  index.html  tenants.json
tests/: README.md  __init__.py  test_cli_basic.py  test_commands_smoke.py  test_entrypoint.py  test_imports.py  test_routing_integration.py  test_snapshot_replay.py
thn_cli/: __init__.py  __main__.py  cli.py  command_loader.py  pathing.py  registry.py  routing_config.py  routing_engine.py
thn_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: build_binary.py  delta_inspector_report.py  extract_version.py  generate_api_docs.py  generate_policy_pdf.py  generate_tenant_docs.py  release_pdf.py  release_pdf_template_c.py  syncv2_negotiation_viz.py  thn_release_tui.py  (+1 more)
(+336 files in other folders)
