[project]
name = "thn-cli"
version = "0.1.0"
description = "THN Master Control / THN CLI"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "THN System", email = "thn@example.com" }
]

dependencies = []

# Optional extras for developers
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
thn = "thn_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thn_cli*"]
exclude = ["temp_test"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
