[project]
name = "thn-cli"
version = "0.1.0"
description = "THN Master Control / THN CLI"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "THN System", email = "thn@example.com" }]

dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",         # used for blueprints and routing rules
    "click>=8.1",          # indirectly required by some templates & future commands
]

# Optional extras for developers
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "nox",
    "pre-commit",
    "black",
    "flake8",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
thn = "thn_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thn_cli*"]
exclude = ["temp_test"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
